@@ -1,3 +1,8 @@
+2009-06-08  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
+
+	PR libfortran/40334
+	* gfortran.dg/backspace_11.f90: New test.
+
 2009-06-08  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/40373
